# xiaohongshu-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
xiaohongshu_mcp/: server.py
