[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaohongshu-mcp"
version = "0.1.0"
description = "MCP Server for generating Xiaohongshu content with 5 Chinese writing styles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "521w" }
]
keywords = ["mcp", "xiaohongshu", "content-generation", "social-media", "writing", "chinese"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
xiaohongshu-mcp = "xiaohongshu_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["xiaohongshu_mcp"]