[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaohongshu-mcp"
version = "0.2.0"
description = "MCP Server for generating Xiaohongshu content with 5 Chinese writing styles"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "521w", email = "521w@example.com" }
]
keywords = ["mcp", "xiaohongshu", "content-generation", "social-media", "writing", "chinese"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
xiaohongshu-mcp = "xiaohongshu_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["xiaohongshu_mcp"]